--- a/ultimate_rust_crash_course/exercise/c_simple_types/Cargo.toml
+++ b/ultimate_rust_crash_course/exercise/c_simple_types/Cargo.toml
@@ -2,5 +2,6 @@
 name = "ding_machine"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo sergio@giraldo.com.br"]
 
 [dependencies]
