control flow and strings:: by sergio giraldo @ 20221007T1200CEST, gpg signed

--- a/ultimate_rust_crash_course/exercise/d_control_flow_strings/Cargo.toml
+++ b/ultimate_rust_crash_course/exercise/d_control_flow_strings/Cargo.toml
@@ -2,5 +2,6 @@
 name = "d_control_flow_strings"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo sergio@giraldo.com.br"]
 
 [dependencies]
