--- a/ultimate_rust_crash_course/exercise/e_ownership_references/Cargo.toml
+++ b/ultimate_rust_crash_course/exercise/e_ownership_references/Cargo.toml
@@ -2,5 +2,6 @@
 name = "e_ownership_references"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo sergio@giraldo.com.br"]
 
 [dependencies]
