--- a/ultimate_rust_crash_course/exercise/f_structs_traits/Cargo.toml
+++ b/ultimate_rust_crash_course/exercise/f_structs_traits/Cargo.toml
@@ -2,5 +2,6 @@
 name = "f_structs_traits"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo sergio@giraldo.com.br"]
 
 [dependencies]
