enums, vectors:: by sergio giraldo @ 20221008T2040CEST, gpg signed

--- a/ultimate_rust_crash_course/exercise/g_collections_enums/Cargo.toml
+++ b/ultimate_rust_crash_course/exercise/g_collections_enums/Cargo.toml
@@ -2,6 +2,7 @@
 name = "g_collections_enums"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo sergio@giraldo.com.br"]
 
 [dependencies]
 rand = "0.8.5"
