--- a/ultimate_rust2/exercise/traits/Cargo.toml
+++ b/ultimate_rust2/exercise/traits/Cargo.toml
@@ -2,6 +2,7 @@
 name = "traits"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo <sergio@giraldo.com.br>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
