--- a/ultimate_rust2/exercise/errors/Cargo.toml
+++ b/ultimate_rust2/exercise/errors/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aquarium"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo <sergio@giraldo.com.br>"]
 
 [dependencies]
 # I thought you might want this for your library...
