--- a/ultimate_rust2/exercise/threads_channels/Cargo.toml
+++ b/ultimate_rust2/exercise/threads_channels/Cargo.toml
@@ -2,6 +2,7 @@
 name = "threads_channels"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sergio Rodrigues Giraldo <sergio@giraldo.com.br>"]
 
 [dependencies]
 crossbeam = "0.8"
