--- a/warp-websockets-example/Cargo.toml
+++ b/warp-websockets-example/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Sergio Rodrigues Giraldo <sergiorgiraldo@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "1.19.2", features = ["full"] }
+tokio = { version = "1.23.0", features = ["full"] }
 tokio-stream = "0.1.9"
 warp = "0.3"
-serde = {version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = {version = "1.0.150", features = ["derive"] }
+serde_json = "1.0.89"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 crossbeam = "0.7"
 actix-web = "4"
-reqwest = { version = "0.11", features = ["json"] }
+ureq = { version = "2.5.0", features = ["json"] }
